Some fixes and improvements

--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -3,14 +3,16 @@ IMGSZ: 448
 S: 7
 B: 2
 C: 20
+USE_SIGMOID: False
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
 EPOCHS: 150
+EPOCH_TO_UNFREEZE_BACKBONE: 5
 BATCH_SIZE: 64
 NUM_WORKERS: 4
 PERSISTENT_WORKERS: True
 PIN_MEMORY: True
-MAX_LR: 1.e-2
+MAX_LR: 1.e-3
 DIV_FACTOR: 10
 FINAL_DIV_FACTOR: 100
 THREE_PHASE: True
