--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -3,10 +3,10 @@ IMGSZ: 448
 S: 7
 B: 2
 C: 20
-USE_SIGMOID: False
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
 EPOCHS: 150
+UNFREEZE_BACKBONE: False
 EPOCH_TO_UNFREEZE_BACKBONE: 5
 BATCH_SIZE: 64
 NUM_WORKERS: 4
