--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
     "opencv-python>=4.10.0.84",
-    "torchmetrics>=1.6.0",
+    "torchmetrics[detection]>=1.6.0",
 ]
 
 [build-system]
