--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -6,13 +6,12 @@ C: 20
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
 EPOCHS: 50
-UNFREEZE_BACKBONE: False
-EPOCH_TO_UNFREEZE_BACKBONE: 5
-BATCH_SIZE: 64
-NUM_WORKERS: 8
+BACKBONE_TRAINABLE: True
+BATCH_SIZE: 32
+NUM_WORKERS: 4
 PERSISTENT_WORKERS: True
 PIN_MEMORY: True
-MAX_LR: 1.e-2
+MAX_LR: 1.e-3
 DIV_FACTOR: 10
 FINAL_DIV_FACTOR: 100
 THREE_PHASE: True
