--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -20,3 +20,7 @@ CYCLE_MOMENTUM: True
 BASE_MOMENTUM: 0.85
 MAX_MOMENTUM: 0.95
 WEIGHT_DECAY: 5.e-4
+VALID_STEP: False
+EVAL_CHECKPOINT: "./checkpoints/yolov1-voc2012.pt"
+EVAL_CONF_THRESH: 0.05
+EVAL_NMS_THRESH: 0.3
