--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -1,11 +1,11 @@
-DATASET: "~/Downloads/VOC2012/train_val"
+DATASET: "~/Downloads/VOC/"
 IMGSZ: 448
 S: 7
 B: 2
 C: 20
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
-EPOCHS: 50
+EPOCHS: 135
 BACKBONE_TRAINABLE: True
 BATCH_SIZE: 32
 NUM_WORKERS: 4
