--- a/src/cvnets/yolov1/config.yaml
+++ b/src/cvnets/yolov1/config.yaml
@@ -1,4 +1,4 @@
-DATASET: "~/Downloads/VOC/"
+DATASET: "~/Documents/Datasets/VOC/"
 IMGSZ: 448
 S: 7
 B: 2
@@ -21,6 +21,6 @@ BASE_MOMENTUM: 0.85
 MAX_MOMENTUM: 0.95
 WEIGHT_DECAY: 5.e-4
 VALID_STEP: False
-EVAL_CHECKPOINT: "./checkpoints/yolov1-voc2012.pt"
+EVAL_CHECKPOINT: "./checkpoints/yolov1-voc.pt"
 EVAL_CONF_THRESH: 0.05
 EVAL_NMS_THRESH: 0.3
