--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,16 @@ readme = "README.md"
 authors = [{ name = "Mateusz Kowalczyk", email = "mkowalczyk013@gmail.com" }]
 requires-python = ">=3.12"
 dependencies = [
-    "albumentations==1.4.23",
-    "ipykernel==6.29.5",
-    "matplotlib==3.10.0",
-    "opencv-python==4.10.0.84",
-    "torchinfo==1.8.0",
-    "torchmetrics[detection]==1.6.0",
+    "albumentations>=1.4.23",
+    "graphviz>=0.20.3",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.10.0",
+    "opencv-python>=4.10.0.84",
+    "pyclustering>=0.10.1.2",
+    "tensorboard>=2.18.0",
+    "torchinfo>=1.8.0",
+    "torchmetrics[detection]>=1.6.0",
+    "torchviz>=0.0.3",
 ]
 
 [build-system]
