--- a/src/cvnets/yolo/v2/config.yaml
+++ b/src/cvnets/yolo/v2/config.yaml
@@ -1,6 +1,7 @@
 DATASET: "~/Documents/Datasets/VOC/"
 ANCHOR_BBOXES: "./checkpoints/anchor_bboxes_k_5.npy"
 IMGSZ: 416
+DOWNSAMPLE: 32 # Convolutional layers downsample input image five times (so 2^5=32)
 C: 20
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
