--- a/src/cvnets/yolo/v2/config.yaml
+++ b/src/cvnets/yolo/v2/config.yaml
@@ -6,12 +6,12 @@ SAMPLE_IMGSZ: False
 DOWNSAMPLE: 32 # Convolutional layers downsample input image five times (so 2^5=32)
 LAMBDA_COORD: 5
 LAMBDA_NOOBJ: 0.5
-EPOCHS: 135
+EPOCHS: 165
 BATCH_SIZE: 32
 NUM_WORKERS: 4
 PERSISTENT_WORKERS: True
 PIN_MEMORY: True
-MAX_LR: 1.e-3
+MAX_LR: 1.e-2
 DIV_FACTOR: 10
 FINAL_DIV_FACTOR: 100
 THREE_PHASE: True
@@ -19,10 +19,11 @@ ANNEAL_STRATEGY: "cos"
 CYCLE_MOMENTUM: True
 BASE_MOMENTUM: 0.85
 MAX_MOMENTUM: 0.95
-WEIGHT_DECAY: 5.e-4
+WEIGHT_DECAY: 1.e-3
 VALID_STEP: False
 
 # For evaluation.
-EVAL_CHECKPOINT: "./checkpoints/yolov2-voc-epochs-135.pt"
+EVAL_CHECKPOINT: "./checkpoints/run-2025-01-23-10-01-04/yolov2-voc.pt"
 EVAL_CONF_THRESH: 0.2
 EVAL_NMS_THRESH: 0.4
+EVAL_SPLIT: "val"
