--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.0",
     "opencv-python>=4.10.0.84",
     "pyclustering>=0.10.1.2",
+    "python-dotenv>=1.0.1",
     "tensorboard>=2.18.0",
     "torchinfo>=1.8.0",
     "torchmetrics[detection]>=1.6.0",
