--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pyclustering>=0.10.1.2",
     "pynvml>=12.0.0",
     "python-dotenv>=1.0.1",
+    "scikit-learn>=1.6.1",
+    "supervision>=0.25.1",
     "tensorboard>=2.18.0",
     "torchinfo>=1.8.0",
     "torchmetrics[detection]>=1.6.0",
