--- a/src/cvnets/unet/config.yaml
+++ b/src/cvnets/unet/config.yaml
@@ -6,13 +6,13 @@ IMGSZ: 256
 # Data Loader
 BATCH_SIZE: 8
 NUM_WORKERS: 2
-PIN_MEMORY: True
-PERSISTENT_WORKERS: True
+PIN_MEMORY: true
+PERSISTENT_WORKERS: true
 
 # Loss
-FOCAL_ALPHA: 0.7
-FOCAL_GAMMA: 2.0
-LOSS_BETA: 0.5 # LOSS_BETA for Focal Loss, (1 - LOSS_BETA) for Dice Loss
+FOCAL_ALPHA: 0.6
+FOCAL_GAMMA: 1.2
+LOSS_BETA: 0.7 # LOSS_BETA for Focal Loss, (1 - LOSS_BETA) for Dice Loss
 
 # Early Stopping
 EARLY_STOPPING_PATIENCE: 10
@@ -20,10 +20,12 @@ EARLY_STOPPING_DELTA: 1.e-4
 
 # Epochs and LR Scheduler
 EPOCHS: 100
-LR: 1.e-3
-LR_FACTOR: 0.1
+LR: 1.e-4
+LR_FACTOR: 0.5
 LR_PATIENCE: 5
 LR_THRESHOLD: 1.e-4 # Roughly speaking, the same as EARLY_STOPPING_DELTA
+WEIGHT_DECAY: 1.e-2
+DECOUPLED_WEIGHT_DECAY: true
 
 # Miscellaneous
 NET_BASE: 32
