--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cvnets"
+name = "neural-nets"
 version = "0.1.0"
 description = "Some computer vision networks"
 readme = "README.md"
@@ -17,6 +17,7 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "supervision>=0.25.1",
     "tensorboard>=2.18.0",
+    "tiktoken>=0.9.0",
     "torch-tb-profiler>=0.4.3",
     "torchinfo>=1.8.0",
     "torchmetrics[detection]>=1.6.0",
@@ -25,6 +26,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/cvnets", "src/llms"]
 
 [project.optional-dependencies]
 cpu = ["torch==2.5.1", "torchvision==0.20.1"]
