--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "torch-tb-profiler>=0.4.3",
     "torchinfo>=1.8.0",
     "torchmetrics[detection]>=1.6.0",
+    "transformers>=4.52.4",
 ]
 
 [build-system]
