--- a/src/llms/config.yaml
+++ b/src/llms/config.yaml
@@ -1,14 +1,23 @@
 ARCHITECTURE: GPT-S
 CONTEXT_LEN: 256
-DROPOUT: 0.0
+DROPOUT: 0.1
 QKV_BIAS: false
 BATCH_SIZE: 4
 NUM_WORKERS: 0
 PERSISTENT_WORKERS: false
-LR: 0.0005
-WEIGHT_DECAY: 0.1
 NUM_EPOCHS: 20
 EVAL_ITER: null
+MAX_LR: 1.e-3
+DIV_FACTOR: 10
+FINAL_DIV_FACTOR: 100
+THREE_PHASE: True
+ANNEAL_STRATEGY: "cos"
+CYCLE_MOMENTUM: True
+BASE_MOMENTUM: 0.85
+MAX_MOMENTUM: 0.95
+PCT_START: 0.2
+WEIGHT_DECAY: 1.e-2
+DECOUPLED_WEIGHT_DECAY: True
 
 ARCHITECTURES:
   GPT-S:
